--- a/OperaExt/browser_extension/manifest.json
+++ b/OperaExt/browser_extension/manifest.json
@@ -1,23 +1,30 @@
 {
-	"manifest_version": 3,
-	"name": "Translate text",
-	"version": "1.0",
-	"description": "Translate text and add in BD",
-	"permissions": ["activeTab", "scripting", "contextMenus", "tabs", "storage"],
-	"background": {
-	  "service_worker": "background.js"
-	},
-	"action": {
-	  "default_popup": "popup.html",
-	  "default_icon": {
-		"16": "images/icon16.png",
-		"48": "images/icon48.png",
-		"128": "images/icon128.png"
-	  }
-	},
-	"icons": {
-	  "16": "images/icon16.png",
-	  "48": "images/icon48.png",
-	  "128": "images/icon128.png"
-	}
+  "manifest_version": 3,
+  "name": "Translate text",
+  "version": "1.0",
+  "description": "Translate text and add in BD",
+  "permissions": [
+    "activeTab",
+    "scripting",
+    "contextMenus",
+    "tabs",
+    "storage",
+    "clipboardWrite"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "images/icon16.png",
+      "48": "images/icon48.png",
+      "128": "images/icon128.png"
+    }
+  },
+  "icons": {
+    "16": "images/icon16.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
   }
+}
