add stable api and front

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /venv/
 /.idea
-/__pycache__/
+/__pycache__/check_English_json.cpython-311.pyc
 /.env
+/check_english/__pycache__/check_English_json.cpython-311.pyc
+/OperaExt/App/__pycache__/
